kubernetes/apps/flux-system/flux-instance/webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  hostnames:
    - "flux-webhook.${DOMAIN_5}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-5-subdomain-https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
